# mp13-llm-engine

./: .gitignore  APPLAYERS.md  CONFIG.md  FEATURES.md  GOTCHAS.MD  GOTCHAS.md  INSTALL.md  README.MD  README.md  mp13chat.py  mp13config.py  pyproject.toml  pyproject.toml_gb10  pyproject.toml_torch_2.6.0  pyproject.toml_torch_2.9.1
.github/workflows/: Clone_traffic.yml
configs/: mp13tools.json
data/: test_mp13_engine_demo_training.json
demo/: demo_mp13_engine.py
misc/: cuda_kernel_smoke.py  gpu_sanity_check.py  triton_check.py
src/app/: __init__.py  config.py  context_cursor.py  engine_session.py  mp13chat.py
src/mp13_engine/: __init__.py  mp13_adapter.py  mp13_cache.py  mp13_callbacks.py  mp13_config.py  mp13_config_paths.py  mp13_engine.py  mp13_engine_api.py  mp13_infer.py  mp13_patches.py  mp13_prep.py  mp13_state.py  mp13_toolbox.py  mp13_tools_builtin.py  mp13_tools_parser.py  mp13_train.py  mp13_utils.py
